Hide ShareButton in Mobile

--- a/index.html
+++ b/index.html
@@ -373,6 +373,9 @@
                 $('#main-container').addClass('main-container');
                 $('.container-content').css('margin-left', '11px');
             }
+			if (this.innerWidth < 768) {
+				$('#shareRoundIcons').hide();
+			}
 
 
         });
