--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<html>
+ï»¿<html lang="en">
 <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -47,16 +47,7 @@
     </nav>
     <div class="container main-container" id="main-container">
         <div class="row">
-
-
-
             <div class="col-sm-7 container-content">
-
-
-
-                <div class="employer_details_logo ">
-
-                </div>
                 <div class="employer_details_txt">
                     <h3 class="header-text">
                         About
@@ -64,8 +55,6 @@
                     </h3>
 
                     <div class="hide_in_desk">
-
-
                     </div>
                     <span id="ctl00_content_UIProfile1_lbProfileText">
                         3D Recruit Education is a specialist recruitment agency for Primary
@@ -118,209 +107,49 @@
                 <br>
                 <div class="block_sec bot_head not_show">
                     <h5 class="header-text">Latest vacancies </h5>
-                    <div class="employer_vacancies">
+                    <div class="container" id="property-listings">
                         <span id="ctl00_content_UICompanyJobResults1_lbMessage">Click below to view full vacancy details</span>
+                        <div class="row">
+                            <div class="col-sm-6">
+                                <div class="brdr bgc-fff pad-10 box-shad btm-mrg-20 property-listing">
+                                    <div class="media">
+                                        <div class="btn-content">
+                                            <div>
+                                                <a class="pull-left" href="#" target="_parent">
+                                                    <img src="https://admin.247media.net/logos/1LOGO_OK.jpg" alt="Chalet Chef" class="img-responsive listing-img">
+                                                </a>
+                                            </div>
+                                            <div>
+                                                <a href="job-details_Chalet_Chef_La_Plagne_France_61569.aspx" class="btn-view-details">View details</a>
+                                            </div>
+                                        </div>
+                                        <!--<div class="clearfix visible-sm"></div>-->
+
+                                        <div class="media-body fnt-smaller">
+                                            <a href="#" target="_parent"></a>
+
+                                            <h4 class="media-heading">
+                                                <a href="#" target="_parent">Chalet Chef</a>
+                                            </h4>
 
 
-                        <div class="vacancy_sec change_pad">
-                            <div class="vacancy_secL change_rit">
-                                <h3><a href="job-details_Battle_Area_-_Teacher_of_Music_Battle_704162.aspx">Battle Area - Teacher of Music</a></h3>
-                                <p>
-                                    <span class="hide_in_mob">Battle, </span>3D Recruit Education<br>
-                                    <span class="benefits">pay to scale £</span>
-                                </p>
-
-                                <p class="hide_in_mob">
-                                    3D Recruit Education are working closely with a secondary school in...
-                                </p>
-                            </div>
-                            <div class="vacancy_secR change_lft">
-
-                                <a href="job-details_Battle_Area_-_Teacher_of_Music_Battle_704162.aspx">
-                                    <img src="https://admin.247media.net/logos/13d_education.png" alt="Battle Area - Teacher of Music">
-                                </a>
-                                <a href="job-details_Battle_Area_-_Teacher_of_Music_Battle_704162.aspx" class="vacancy_secR_details">View details</a>
-                            </div>
-                        </div>
-
-                        <div class="vacancy_sec vacancy_color change_pad">
-                            <div class="vacancy_secL change_rit">
-                                <h3><a href="job-details_Daily_Supply_Teachers_Needed_in_Sussex__Kent_Kent_and_Sussex_704156.aspx">Daily Supply Teachers Needed in Sussex &amp; Kent</a></h3>
-                                <p>
-                                    <span class="hide_in_mob">Kent and Sussex, </span>3D Recruit Education<br>
-                                    <span>Competitive pay rates • Free CPD training  • Holiday Pay • Safeguarding Training</span>
-                                </p>
-
-                                <p class="hide_in_mob">
-                                    Are you
-                                    looking to begin Supply Teaching in the Sussex and Kent...
-                                </p>
-                            </div>
-                            <div class="vacancy_secR change_lft">
-
-                                <a href="job-details_Daily_Supply_Teachers_Needed_in_Sussex__Kent_Kent_and_Sussex_704156.aspx">
-                                    <img src="https://admin.247media.net/logos/13d_education.png" alt="Daily Supply Teachers Needed in Sussex &amp; Kent">
-                                </a>
-                                <a href="job-details_Daily_Supply_Teachers_Needed_in_Sussex__Kent_Kent_and_Sussex_704156.aspx" class="vacancy_secR_details">View details</a>
+                                            <ul class="list-inline mrg-0 btm-mrg-10 clr-535353">
+                                                <li>La Plagne, France, Alpine365</li>
+                                            </ul>
+                                            <ul class="list-inline mrg-0 btm-mrg-10 clr-535353">
+                                                <li>
+                                                    High Â£ + bonus + commission + food + accommodation + travel + ski hire + lift pass + ski insurance
+                                                </li>
+                                            </ul>
+                                            <p class="hidden-xs">Independent chalet firm requires a restaurant-trained professional...</p>
+                                        </div>
+                                    </div>
+                                </div>
                             </div>
                         </div>
-
-                        <div class="vacancy_sec change_pad">
-                            <div class="vacancy_secL change_rit">
-                                <h3><a href="job-details_Hastings_–_Year_5_Teacher_hastings_704164.aspx">Hastings – Year 5 Teacher </a></h3>
-                                <p>
-                                    <span class="hide_in_mob">hastings, </span>3D Recruit Education<br>
-                                    <span class="benefits">pay to scale</span>
-                                </p>
-
-                                <p class="hide_in_mob">
-                                    3D Recruit are working with a friendly Primary school in the...
-                                </p>
-                            </div>
-                            <div class="vacancy_secR change_lft">
-
-                                <a href="job-details_Hastings_–_Year_5_Teacher_hastings_704164.aspx">
-                                    <img src="https://admin.247media.net/logos/13d_education.png" alt="Hastings – Year 5 Teacher ">
-                                </a>
-                                <a href="job-details_Hastings_–_Year_5_Teacher_hastings_704164.aspx" class="vacancy_secR_details">View details</a>
-                            </div>
-                        </div>
-
-                        <div class="vacancy_sec vacancy_color change_pad">
-                            <div class="vacancy_secL change_rit">
-                                <h3><a href="job-details_Hastings_–_Year_6_Teacher_Hastings_704161.aspx">Hastings – Year 6 Teacher </a></h3>
-                                <p>
-                                    <span class="hide_in_mob">Hastings, </span>3D Recruit<br>
-                                    <span>pay to scale</span>
-                                </p>
-
-                                <p class="hide_in_mob">
-                                    3D Recruit are working with a friendly Primary school in the...
-                                </p>
-                            </div>
-                            <div class="vacancy_secR change_lft">
-
-                                <a href="job-details_Hastings_–_Year_6_Teacher_Hastings_704161.aspx">
-                                    <img src="https://admin.247media.net/logos/13d_education.png" alt="Hastings – Year 6 Teacher ">
-                                </a>
-                                <a href="job-details_Hastings_–_Year_6_Teacher_Hastings_704161.aspx" class="vacancy_secR_details">View details</a>
-                            </div>
-                        </div>
-
-                        <div class="vacancy_sec change_pad">
-                            <div class="vacancy_secL change_rit">
-                                <h3><a href="job-details_Long_Term_Supply_Teachers_for_Kent__Sussex_Sussex_and_Kent_704157.aspx">Long Term Supply Teachers for Kent &amp; Sussex</a></h3>
-                                <p>
-                                    <span class="hide_in_mob">Sussex and Kent, </span>3D Recruit Education<br>
-                                    <span class="benefits">Paid to scale * Consultants Available to speak to 6am - 11pm * Free CPD Training * Free Safegaurding Training</span>
-                                </p>
-
-                                <p class="hide_in_mob">
-                                    Following the success of the last 18 months, we are looking forward...
-                                </p>
-                            </div>
-                            <div class="vacancy_secR change_lft">
-
-                                <a href="job-details_Long_Term_Supply_Teachers_for_Kent__Sussex_Sussex_and_Kent_704157.aspx">
-                                    <img src="https://admin.247media.net/logos/13d_education.png" alt="Long Term Supply Teachers for Kent &amp; Sussex">
-                                </a>
-                                <a href="job-details_Long_Term_Supply_Teachers_for_Kent__Sussex_Sussex_and_Kent_704157.aspx" class="vacancy_secR_details">View details</a>
-                            </div>
-                        </div>
-
-                        <div class="vacancy_sec vacancy_color change_pad">
-                            <div class="vacancy_secL change_rit">
-                                <h3><a href="job-details_PE_Teacher_for_Special_Independent_School_East_Sussex_704159.aspx">PE Teacher for Special Independent School</a></h3>
-                                <p>
-                                    <span class="hide_in_mob">East Sussex, </span>3D Recruit Education<br>
-                                    <span>Benefits of working with 3D Recruit Education • Competitive pay rate (negotiable) • Free CPD training • Holiday pay • Safeguard Training</span>
-                                </p>
-
-                                <p class="hide_in_mob">
-                                    3D Recruit&nbsp;Education are&nbsp;currently recruiting for a&nbsp;P.E&nbsp;Teacher&nbsp;to...
-                                </p>
-                            </div>
-                            <div class="vacancy_secR change_lft">
-
-                                <a href="job-details_PE_Teacher_for_Special_Independent_School_East_Sussex_704159.aspx">
-                                    <img src="https://admin.247media.net/logos/13d_education.png" alt="PE Teacher for Special Independent School">
-                                </a>
-                                <a href="job-details_PE_Teacher_for_Special_Independent_School_East_Sussex_704159.aspx" class="vacancy_secR_details">View details</a>
-                            </div>
-                        </div>
-
-                        <div class="vacancy_sec change_pad">
-                            <div class="vacancy_secL change_rit">
-                                <h3><a href="job-details_Steiner_Teacher_-_Independent_School_-_Sussex_Sussex_and_Kent_704155.aspx">Steiner Teacher - Independent School - Sussex</a></h3>
-                                <p>
-                                    <span class="hide_in_mob">Sussex and Kent, </span>3D Recruit Education<br>
-                                    <span class="benefits">• Subsidised DBS if required • CPD training • Safeguarding training • Competitive rates of pay</span>
-                                </p>
-
-                                <p class="hide_in_mob">
-                                    If you have experience teaching at
-                                    a&nbsp;Steiner&nbsp;School then...
-                                </p>
-                            </div>
-                            <div class="vacancy_secR change_lft">
-
-                                <a href="job-details_Steiner_Teacher_-_Independent_School_-_Sussex_Sussex_and_Kent_704155.aspx">
-                                    <img src="https://admin.247media.net/logos/13d_education.png" alt="Steiner Teacher - Independent School - Sussex">
-                                </a>
-                                <a href="job-details_Steiner_Teacher_-_Independent_School_-_Sussex_Sussex_and_Kent_704155.aspx" class="vacancy_secR_details">View details</a>
-                            </div>
-                        </div>
-
-                        <div class="vacancy_sec vacancy_color change_pad">
-                            <div class="vacancy_secL change_rit">
-                                <h3><a href="job-details_Swale_–_Teacher_of_Business_studies_Swale_704160.aspx">Swale – Teacher of Business studies</a></h3>
-                                <p>
-                                    <span class="hide_in_mob">Swale, </span>3D Recruit<br>
-                                    <span>£ Competitive Salary</span>
-                                </p>
-
-                                <p class="hide_in_mob">
-                                    Swale – Secondary school &amp; 6th Form- Teacher of Business studies –...
-                                </p>
-                            </div>
-                            <div class="vacancy_secR change_lft">
-
-                                <a href="job-details_Swale_–_Teacher_of_Business_studies_Swale_704160.aspx">
-                                    <img src="https://admin.247media.net/logos/13d_education.png" alt="Swale – Teacher of Business studies">
-                                </a>
-                                <a href="job-details_Swale_–_Teacher_of_Business_studies_Swale_704160.aspx" class="vacancy_secR_details">View details</a>
-                            </div>
-                        </div>
-
-                        <div class="vacancy_sec change_pad">
-                            <div class="vacancy_secL change_rit">
-                                <h3><a href="job-details_Swale_–_Teacher_of_Maths_Swale_704158.aspx">Swale – Teacher of Maths</a></h3>
-                                <p>
-                                    <span class="hide_in_mob">Swale, </span>3D Recruit Education<br>
-                                    <span class="benefits">£TBC Per Annum</span>
-                                </p>
-
-                                <p class="hide_in_mob">
-                                    Swale – Secondary school &amp; 6th Form- Teacher of Maths - £TBC Per...
-                                </p>
-                            </div>
-                            <div class="vacancy_secR change_lft">
-
-                                <a href="job-details_Swale_–_Teacher_of_Maths_Swale_704158.aspx">
-                                    <img src="https://admin.247media.net/logos/13d_education.png" alt="Swale – Teacher of Maths">
-                                </a>
-                                <a href="job-details_Swale_–_Teacher_of_Maths_Swale_704158.aspx" class="vacancy_secR_details">View details</a>
-                            </div>
-                        </div>
-
-
-
-
                     </div>
                 </div>
-
             </div>
-
 
 
             <div class="col-sm-5 container-content side-content">
@@ -373,11 +202,19 @@
                 $('#main-container').addClass('main-container');
                 $('.container-content').css('margin-left', '11px');
             }
-			if (this.innerWidth < 768) {
-				$('#shareRoundIcons').hide();
-			}
+            if (this.innerWidth < 768) {
+                $('#shareRoundIcons').hide();
+            }
+            else {
+                $('#shareRoundIcons').show();
+            }
 
 
+        });
+
+        $(".property-listing").click(function () {
+            window.location = $(this).find("a").attr("href");
+            return false;
         });
     </script>
 </body>
