--- a/index.html
+++ b/index.html
@@ -15,113 +15,122 @@
     <title>JobsPage</title>
 </head>
 <body>
-    <header>
-        <div class="center-block text-center">
-            <div class="logo">
-                <a href="/">
-                    <img src="https://admin.247media.net/logos/mobilejob/13d_education.png" alt="JustJobs">
-                </a>
-            </div>
-            <div class="shareIcons">
-            </div>
-        </div>
-    </header>
-    <nav class="navbar navbar-default mega-nav">
-        <div class="container">
-            <div class="navbar-header">
-                <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#MainMenu" aria-expanded="false">
-                    <span class="sr-only">Toggle navigation</span>
-                    <span class="icon-bar"></span>
-                    <span class="icon-bar"></span>
-                    <span class="icon-bar"></span>
-                </button>
-            </div>
-            <div class="collapse navbar-collapse" id="MainMenu">
-                <ul class="nav navbar-nav menu-list">
-                    <li><a href="#">About Us</a></li>
-                    <li><a href="#">Current Vacancies</a></li>
-                    <li><a href="#">Website</a></li>
-                </ul>
-            </div>
-        </div>
-    </nav>
-    <div class="container main-container" id="main-container">
+    <div class="container loader-container">
         <div class="row">
-            <div class="col-sm-7 container-content">
-                <div class="employer_details_txt">
-                    <h3 class="header-text">
-                        About
-                        3D Recruit Education
-                    </h3>
-                    <span id="ctl00_content_UIProfile1_lbProfileText">
-                        3D Recruit Education is a specialist recruitment agency for Primary
-                        and Secondary School teaching jobs.&nbsp; Located in Battle, near
-                        Hastings we are ideally situated to provide local teaching
-                        professionals to the East Sussex and Kent region.&nbsp;<br>
-                        <br>
-                        We see our size as one of our biggest strengths as we are able to
-                        deliver a personalised, reactive service to all of our candidates
-                        and clients.&nbsp;&nbsp;3D Recruit Education is one of the
-                        few&nbsp;Compliance Plus&nbsp;accredited agencies, and our staff
-                        are some of the most experienced within the field of
-                        recruitment.&nbsp; We are members of APSCo, a governing body for
-                        the recruitment industry and adhere to their standards.
-                        &nbsp;<br>
-                        <br>
-                        3D Recruit Education offer supply and permanent positions in the
-                        following areas:&nbsp;<br>
-                        <br>
-                        <ul>
-                            <li>Primary School Teaching</li>
-                            <li>Secondary School Teaching</li>
-                            <li>Head Teachers and Assistant Head Teachers</li>
-                            <li>Consultant Head Teachers</li>
-                            <li>Education Consultants</li>
-                            <li>Education Advisors</li>
-                            <li>College Tutors</li>
-                            <li>Invigilators</li>
-                            <li>Teaching Assistants</li>
-                            <li>Specialist Teaching Assistants</li>
-                            <li>SENCOs</li>
-                            <li>Pupil Referral Units</li>
-                        </ul>
-                    </span>
+            <div class="animationload">
+                <div class="osahanloading"></div>
+            </div>
+        </div>
+    </div>
+    <div class="page">
+        <header>
+            <div class="center-block text-center">
+                <div class="logo">
+                    <a href="/">
+                        <img src="https://admin.247media.net/logos/mobilejob/13d_education.png" alt="JustJobs">
+                    </a>
                 </div>
-                <br>
-                <br>
-                <div class="block_sec bot_head not_show">
-                    <h5 class="header-text">Latest vacancies </h5>
-                    <div class="container" id="listings">
-                        <span>Click below to view full vacancy details</span>
-                        <div class="row">
-                            <div class="col-sm-6">
-                                <div class="brdr bgc-fff pad-10 box-shad btm-mrg-20 listing">
-                                    <div class="media">
-                                        <div class="btn-content">
-                                            <div>
-                                                <a class="pull-left" href="#" target="_parent">
-                                                    <img src="https://admin.247media.net/logos/1LOGO_OK.jpg" alt="Chalet Chef" class="img-responsive listing-img">
-                                                </a>
+                <div class="shareIcons">
+                </div>
+            </div>
+        </header>
+        <nav class="navbar navbar-default mega-nav">
+            <div class="container">
+                <div class="navbar-header">
+                    <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#MainMenu" aria-expanded="false">
+                        <span class="sr-only">Toggle navigation</span>
+                        <span class="icon-bar"></span>
+                        <span class="icon-bar"></span>
+                        <span class="icon-bar"></span>
+                    </button>
+                </div>
+                <div class="collapse navbar-collapse" id="MainMenu">
+                    <ul class="nav navbar-nav menu-list">
+                        <li><a href="#">About Us</a></li>
+                        <li><a href="#">Current Vacancies</a></li>
+                        <li><a href="#">Website</a></li>
+                    </ul>
+                </div>
+            </div>
+        </nav>
+        <div class="container main-container" id="main-container">
+            <div class="row">
+                <div class="col-sm-7 container-content">
+                    <div class="employer_details_txt">
+                        <h3 class="header-text">
+                            About
+                            3D Recruit Education
+                        </h3>
+                        <span id="ctl00_content_UIProfile1_lbProfileText">
+                            3D Recruit Education is a specialist recruitment agency for Primary
+                            and Secondary School teaching jobs.&nbsp; Located in Battle, near
+                            Hastings we are ideally situated to provide local teaching
+                            professionals to the East Sussex and Kent region.&nbsp;<br>
+                            <br>
+                            We see our size as one of our biggest strengths as we are able to
+                            deliver a personalised, reactive service to all of our candidates
+                            and clients.&nbsp;&nbsp;3D Recruit Education is one of the
+                            few&nbsp;Compliance Plus&nbsp;accredited agencies, and our staff
+                            are some of the most experienced within the field of
+                            recruitment.&nbsp; We are members of APSCo, a governing body for
+                            the recruitment industry and adhere to their standards.
+                            &nbsp;<br>
+                            <br>
+                            3D Recruit Education offer supply and permanent positions in the
+                            following areas:&nbsp;<br>
+                            <br>
+                            <ul>
+                                <li>Primary School Teaching</li>
+                                <li>Secondary School Teaching</li>
+                                <li>Head Teachers and Assistant Head Teachers</li>
+                                <li>Consultant Head Teachers</li>
+                                <li>Education Consultants</li>
+                                <li>Education Advisors</li>
+                                <li>College Tutors</li>
+                                <li>Invigilators</li>
+                                <li>Teaching Assistants</li>
+                                <li>Specialist Teaching Assistants</li>
+                                <li>SENCOs</li>
+                                <li>Pupil Referral Units</li>
+                            </ul>
+                        </span>
+                    </div>
+                    <br>
+                    <br>
+                    <div class="block_sec bot_head not_show">
+                        <h5 class="header-text">Latest vacancies </h5>
+                        <div class="container" id="listings">
+                            <span>Click below to view full vacancy details</span>
+                            <div class="row">
+                                <div class="col-sm-6">
+                                    <div class="brdr bgc-fff pad-10 box-shad btm-mrg-20 listing">
+                                        <div class="media">
+                                            <div class="btn-content">
+                                                <div>
+                                                    <a class="pull-left" href="#" target="_parent">
+                                                        <img src="https://admin.247media.net/logos/1LOGO_OK.jpg" alt="Chalet Chef" class="img-responsive listing-img">
+                                                    </a>
+                                                </div>
+                                                <div>
+                                                    <a href="job-details_Chalet_Chef_La_Plagne_France_61569.aspx" class="btn-view-details">View details</a>
+                                                </div>
                                             </div>
-                                            <div>
-                                                <a href="job-details_Chalet_Chef_La_Plagne_France_61569.aspx" class="btn-view-details">View details</a>
+                                            <!--<div class="clearfix visible-sm"></div>-->
+                                            <div class="media-body fnt-smaller">
+                                                <a href="#" target="_parent"></a>
+                                                <h4 class="media-heading">
+                                                    <a href="#" target="_parent">Chalet Chef</a>
+                                                </h4>
+                                                <ul class="list-inline mrg-0 btm-mrg-10 clr-535353">
+                                                    <li><i class="fa fa-map-marker fa-lg" aria-hidden="true"></i>&nbsp;La Plagne, France, Alpine365</li>
+                                                </ul>
+                                                <ul class="list-inline mrg-0 btm-mrg-10 clr-535353">
+                                                    <li>
+                                                        <i class="fa fa-gbp fa-lg" aria-hidden="true"></i>&nbsp;High £ + bonus + commission + food + accommodation + travel + ski hire + lift pass + ski insurance
+                                                    </li>
+                                                </ul>
+                                                <p class="hidden-xs"><i class="fa fa-info-circle" aria-hidden="true"></i>&nbsp;Independent chalet firm requires a restaurant-trained professional...</p>
                                             </div>
-                                        </div>
-                                        <!--<div class="clearfix visible-sm"></div>-->
-                                        <div class="media-body fnt-smaller">
-                                            <a href="#" target="_parent"></a>
-                                            <h4 class="media-heading">
-                                                <a href="#" target="_parent">Chalet Chef</a>
-                                            </h4>
-                                            <ul class="list-inline mrg-0 btm-mrg-10 clr-535353">
-                                                <li><i class="fa fa-map-marker fa-lg" aria-hidden="true"></i>&nbsp;La Plagne, France, Alpine365</li>
-                                            </ul>
-                                            <ul class="list-inline mrg-0 btm-mrg-10 clr-535353">
-                                                <li>
-                                                    <i class="fa fa-gbp fa-lg" aria-hidden="true"></i>&nbsp;High £ + bonus + commission + food + accommodation + travel + ski hire + lift pass + ski insurance
-                                                </li>
-                                            </ul>
-                                            <p class="hidden-xs"><i class="fa fa-info-circle" aria-hidden="true"></i>&nbsp;Independent chalet firm requires a restaurant-trained professional...</p>
                                         </div>
                                     </div>
                                 </div>
@@ -129,51 +138,51 @@
                         </div>
                     </div>
                 </div>
-            </div>
-            <div class="col-sm-5 container-content side-content">
-                <div class="row bottom-margin-10">
-                    <div class="col-sm-12">
-                        <iframe width="104%" height="254" src="https://www.youtube.com/embed/Qeiry8HBh1k" frameborder="0" gesture="media" allowfullscreen></iframe>
-                    </div>
-                </div>
-                <div class="row bottom-margin-10">
-                    <div class="col-sm-12">
-                        <img src="https://admin.247media.net/profilelargeimages/101_ALPINE.jpg" class="article_image">
-                    </div>
-                </div>
-                <div class="row bottom-margin-10">
-                    <div class="col-sm-12">
-                        <div id="carousel-example-generic" class="carousel slide" data-ride="carousel" style="width: 104%">
-                            <!-- Wrapper for slides -->
-                            <div class="carousel-inner" role="listbox">
-                                <div class="item active">
-                                    <img src="https://admin.247media.net/profilesliderimages/1103_ALPINE.jpg" alt="">
-                                </div>
-                                <div class="item">
-                                    <img src="https://admin.247media.net/profilesliderimages/Small Chamois.jpg" alt="">
-                                </div>
-                            </div>
-
-                            <!-- Controls -->
-                            <a class="left carousel-control" href="#carousel-example-generic" role="button" data-slide="prev">
-                                <span class="glyphicon glyphicon-chevron-left" aria-hidden="true"></span>
-                                <span class="sr-only">Previous</span>
-                            </a>
-                            <a class="right carousel-control" href="#carousel-example-generic" role="button" data-slide="next">
-                                <span class="glyphicon glyphicon-chevron-right" aria-hidden="true"></span>
-                                <span class="sr-only">Next</span>
-                            </a>
+                <div class="col-sm-5 container-content side-content">
+                    <div class="row bottom-margin-10">
+                        <div class="col-sm-12">
+                            <iframe width="104%" height="254" src="https://www.youtube.com/embed/Qeiry8HBh1k" frameborder="0" gesture="media" allowfullscreen></iframe>
                         </div>
                     </div>
-                </div>
-                <div class="row bottom-margin-10">
-                    <div class="col-sm-12">
-                        <div id="map-employer"></div> 
+                    <div class="row bottom-margin-10">
+                        <div class="col-sm-12">
+                            <img src="https://admin.247media.net/profilelargeimages/101_ALPINE.jpg" class="article_image">
+                        </div>
                     </div>
-                </div>
-                <div class="row  bottom-margin-10">
-                    <div class="col-sm-12 col-sm-offset-2">
-                        <div class="shareIcons">
+                    <div class="row bottom-margin-10">
+                        <div class="col-sm-12">
+                            <div id="carousel-example-generic" class="carousel slide" data-ride="carousel" style="width: 104%">
+                                <!-- Wrapper for slides -->
+                                <div class="carousel-inner" role="listbox">
+                                    <div class="item active">
+                                        <img src="https://admin.247media.net/profilesliderimages/1103_ALPINE.jpg" alt="">
+                                    </div>
+                                    <div class="item">
+                                        <img src="https://admin.247media.net/profilesliderimages/Small Chamois.jpg" alt="">
+                                    </div>
+                                </div>
+
+                                <!-- Controls -->
+                                <a class="left carousel-control" href="#carousel-example-generic" role="button" data-slide="prev">
+                                    <span class="glyphicon glyphicon-chevron-left" aria-hidden="true"></span>
+                                    <span class="sr-only">Previous</span>
+                                </a>
+                                <a class="right carousel-control" href="#carousel-example-generic" role="button" data-slide="next">
+                                    <span class="glyphicon glyphicon-chevron-right" aria-hidden="true"></span>
+                                    <span class="sr-only">Next</span>
+                                </a>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="row bottom-margin-10">
+                        <div class="col-sm-12">
+                            <div id="map-employer"></div>
+                        </div>
+                    </div>
+                    <div class="row  bottom-margin-10">
+                        <div class="col-sm-12 col-sm-offset-2">
+                            <div class="shareIcons">
+                            </div>
                         </div>
                     </div>
                 </div>
@@ -211,6 +220,13 @@
             window.location = $(this).find("a").attr("href");
             return false;
         });
+
+        window.setInterval(function () {
+            $('.osahanloading').slideUp("fast", function () {
+                $('.loader-container').fadeOut();
+                $('.page').fadeIn();
+            });
+        }, 4000);
     </script>
 
     <script>
