Fix Mobile View

--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
                         <img src="https://admin.247media.net/logos/mobilejob/13d_education.png" alt="JustJobs">
                     </a>
                 </div>
-                <div class="shareIcons">
+                <div class="shareIcons hidden-xs">
                 </div>
             </div>
         </header>
@@ -102,7 +102,7 @@
                         <div class="container" id="listings">
                             <span>Click below to view full vacancy details</span>
                             <div class="row">
-                                <div class="col-sm-6">
+                                <div class="col-sm-6 width-53">
                                     <div class="brdr bgc-fff pad-10 box-shad btm-mrg-20 listing">
                                         <div class="media">
                                             <div class="btn-content">
@@ -129,7 +129,7 @@
                                                         <i class="fa fa-gbp fa-lg" aria-hidden="true"></i>&nbsp;High £ + bonus + commission + food + accommodation + travel + ski hire + lift pass + ski insurance
                                                     </li>
                                                 </ul>
-                                                <p class="hidden-xs"><i class="fa fa-info-circle" aria-hidden="true"></i>&nbsp;Independent chalet firm requires a restaurant-trained professional...</p>
+                                                <p><i class="fa fa-info-circle" aria-hidden="true"></i>&nbsp;Independent chalet firm requires a restaurant-trained professional...</p>
                                             </div>
                                         </div>
                                     </div>
